<resources>
    <string name="app_name">FoodApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign up.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="twitter">twitter</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="required">Required*</string>
    <string name="skip">Skip</string>
    <string name="intro_description">In publishing and graphic design, Lorem Ipsum is a placeholder text commonly used to demonstrate the visual form of a document or</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="description_password">Please enter your email address. You will receive a link to create a new password via email.</string>
    <string name="send">SEND</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_title">Explore your Favorite Food</string>
    <string name="popular">Popular</string>
    <string name="view_more">View More</string>
    <string name="add">Add</string>
</resources>